# brainrender-napari

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
blog/: brainrender_napari_enhancements.md
brainrender_napari/: __init__.py  atlas_download_dialog.py  atlas_progress_bar.py  atlas_version_manager_widget.py  atlas_viewer_widget.py  brainrender_dataset_widget.py  brainrender_manager_widget.py  brainrender_viewer_widget.py  brainrender_widget.py  napari.yaml  napari_atlas_representation.py  structure_tree_model.py
brainrender_napari/data_models/: atlas_table_model.py  atlas_table_proxy_model.py  dataset_table_model.py  downloadable_atlases_proxy_model.py  downloaded_atlases_proxy_model.py  search_results_model.py  structure_tree_model.py
brainrender_napari/utils/: brainglobe_logo.py  color_utils.py  dataset_apis.py  download_datasets.py  formatting.py  from_viewer.py  load_user_data.py  morphapi_integration.py  threading.py  visualize_datasets.py
brainrender_napari/widgets/: atlas_manager_dialog.py  atlas_manager_filter.py  atlas_manager_view.py  atlas_progress_bar.py  atlas_table_proxy_model.py  atlas_table_view.py  atlas_view.py  atlas_viewer_filter.py  atlas_viewer_view.py  brain_region_view.py  database_search_widget.py  dataset_manager_view.py  species_filter_widget.py  structure_view.py
docs/: preset_colors.md  sorting_and_filtering.md
docs/source/: api_index.rst  conf.py  index.rst
src/brainglobe_napari/: __init__.py  atlas_viewer_utils.py  atlas_viewer_widget.py  napari.yaml  napari_atlas_representation.py  structure_tree_model.py  surface_color_editor.py
src/brainglobe_napari/_tests/: test_reader.py  test_sample_data.py  test_widget.py
src/brainglobe_napari/tests/: conftest.py  test_atlas_viewer_widget.py  test_download_dialog.py  test_metadata_caching.py  test_metadata_reading.py  test_napari_atlas_representation.py
tests/: conftest.py
tests/test_integration/: test_atlas_version_manager_widget.py  test_atlas_viewer_widget.py  test_brainrender_dataset_widget.py  test_brainrender_manager_widget.py  test_brainrender_viewer_widget.py  test_brainrender_widget.py
tests/test_unit/: conftest.py  test_atlas_manager_filter.py  test_atlas_manager_view.py  test_atlas_progress_bar.py  test_atlas_table_model.py  test_atlas_table_view.py  test_atlas_view.py  test_atlas_viewer_filter.py  test_atlas_viewer_view.py  test_atlas_viewer_widget.py  test_brain_region_view.py  test_color_utils.py  test_dataset_table_model.py  test_download_datasets.py  test_download_dialog.py  test_download_update_dialog.py  test_downloadable_atlases_proxy_model.py  test_downloaded_atlases_proxy_model.py  test_formatting.py  test_metadata_reading.py  test_morphapi_integration.py  test_napari_atlas_representation.py  test_search_results_model.py  test_species_filter_widget.py  test_structure_tree_model.py  test_structure_view.py  test_threading.py  test_visualize_datasets.py
