[project]
name = "brainrender-napari"
authors = [{name = "Alessandro Felder", email= "a.felder@ucl.ac.uk"}]
description = "A napari plugin to render BrainGlobe atlases and associated data as layers."
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "brainglobe-atlasapi>=2.2.0",
    "brainglobe-utils>=0.4.3",
    "meshio",
    "napari>=0.6.1",
    "numpy",
    "qtpy",
]

[project.urls]
"Homepage" = "https://github.com/brainglobe/brainrender-napari"
"Bug Tracker" = "https://github.com/brainglobe/brainrender-napari/issues"
"Documentation" = "https://brainglobe.github.io/brainrender-napari"

"Source Code" = "https://github.com/brainglobe/brainrender-napari"
"User Support" = "https://github.com/brainglobe/brainrender-napari/issues"

[project.entry-points."napari.manifest"]
brainrender-napari = "brainrender_napari:napari.yaml"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-qt",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "pyqt5"
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainrender_napari*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=brainrender_napari"

[tool.black]
target-version = ['py311', 'py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
lint.select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}, napari-dev
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainrender_napari --cov-report=xml
passenv =
    CI
    GITHUB_ACTIONS
    DISPLAY
    XAUTHORITY
    NUMPY_EXPERIMENTAL_ARRAY_FUNCTION
    PYVISTA_OFF_SCREEN
deps =
    napari-dev: git+https://github.com/napari/napari
"""
