[metadata]
name = brainglobe-napari
version = 0.0.1
description = BrainGlobe Tools for computational neuroanatomy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brainglobe/brainglobe-napari
author = Alessandro Felder
author_email = a.felder@ucl.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/brainglobe/brainglobe-napari/issues
    Documentation = https://github.com/brainglobe/brainglobe-napari#README.md
    Source Code = https://github.com/brainglobe/brainglobe-napari
    User Support = https://github.com/brainglobe/brainglobe-napari/issues

[options]
packages = find:
install_requires =
    bg-atlasapi
    numpy
    magicgui
    qtpy
    superqt

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    brainglobe-napari = brainglobe_napari:napari.yaml

[options.extras_require]
dev =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
